tests/success/mutability.kd
fn func(var foo: i32, let bar: i32): i32 {
    foo = foo + bar;
    return foo;
}

fn main(): i32 {
    var foo: i32 = 5;
    foo = 10;
    let bar = foo;
    return func(foo, bar);
}
