tests/compile-error/type_errors.kd
fn test(let foo: *mut i32, let bar: i32) {
    *foo = bar;
}

fn main(): i32 {
    let foo: i32 = 10;
    test();
    test(foo, &foo);
    return foo;
}
